# MinimaxLaska

./: Board.c  CMakeLists.txt  Campo.c  Cell.c  Cella.c  Doxyfile  Multiplayer.c  Piece.c  README  README.md  Relazione.md  main  main.c
Laska/: CMakeLists.txt  Campo.c  Campo.h  Cella.c  Cella.h  Pedina.c  Pedina.h  main.c  scacchiera.c
Laska.xcodeproj/: project.pbxproj
Laska/headers/: Pedina.h
docs/html/: _board_8c.html  _board_8c.js  _board_8c__incl.dot  _board_8c__incl.map  _board_8c__incl.md5  _board_8h.html  _board_8h.js  _board_8h__dep__incl.dot  _board_8h__dep__incl.map  _board_8h__dep__incl.md5  _board_8h__incl.dot  _board_8h__incl.map  _board_8h__incl.md5  _board_8h_source.html  _bool_8c.html  _bool_8c.js  _bool_8c__incl.dot  _bool_8c__incl.map  _bool_8c__incl.md5  _bool_8h.html  _bool_8h.js  _bool_8h__dep__incl.dot  _bool_8h__dep__incl.map  _bool_8h__dep__incl.md5  _bool_8h_source.html  _cell_8c.html  _cell_8c.js  _cell_8c__incl.dot  _cell_8c__incl.map  _cell_8c__incl.md5  _cell_8h.html  _cell_8h.js  _cell_8h__dep__incl.dot  _cell_8h__dep__incl.map  _cell_8h__dep__incl.md5  _cell_8h__incl.dot  _cell_8h__incl.map  _cell_8h__incl.md5  _cell_8h_source.html  _game_8c.html  (+131 more)
docs/latex/: _board_8c.tex  _board_8c__incl.dot  _board_8h.tex  _bool_8c.tex  (+51 more)
headers/: Campo.h  Cella.h  Pedina.h
include/: Board.h  Bool.h  Cell.h  Game.h  MinimaxAI.c  MinimaxAI.h  Moves.h  Multiplayer.h  Piece.h  Play.h  SinglePlayer.h  Singleplayer.h  Tower.h
src/: Board.c  Bool.c  Cell.c  Game.c  Moves.c  Multiplayer.c  Piece.c  Play.c  SinglePlayer.c  Singleplayer.c  Tower.c
(+75 files in other folders)
